# -zilan-skill

./: .gitattributes  .gitignore  AGENT_UPGRADE_PORTABLE.md  CHANGELOG.md  CODEX_REGRESSION_TESTS.md  CONTRIBUTING-en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  SKILL-en.md  SKILL.md  pyproject.toml  沟通过程.md
.github/workflows/: ci.yml
agents/: openai.yaml  zilan-claude-code.md  zilan-codex.md
context/: 中观应成精要.md  南传观禅指南.md  因明推理引擎.md  心类学认知分析.md  摄类学工具箱.md  模因机器视角下的佛教结集与传播.md
context/agama/: T0001-chang-agama.md  T0026-zhong-agama.md  T0099-za-agama.md  T0125-ekottarika-agama.md  agama-index.md
context/agama/_source/: T01n0001.xml
docs/: installation.md  maintenance-roadmap.md  openai-api-harness.md  platform-validation.md  provider-routes.md  runtime-validation-log.md  validation-evidence.md
docs/runtime-evidence/: 2026-06-15-clean-install-smoke.md  README.md  evidence-template.md
scripts/: build_agama_context.py  openai_api_harness.py  search_agama.py  validate_zilan_repo.py
tests/: regression_cases.yaml  test_openai_api_harness.py  test_search_agama.py  test_validate_zilan_repo.py
