[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zilan-agent"
version = "2.4.0"
description = "Validation helpers and API harness for the Zilan Buddhist agent corpus."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
  "PyYAML>=6.0",
  "pytest>=7.4,<8.0",
  "ruff>=0.6",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py310"
line-length = 120
include = ["scripts/*.py", "tests/*.py"]

[tool.ruff.lint]
select = ["B", "BLE", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_agama_context.py" = ["E501"]
